Update and rename contact.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Author URL: http://w3layouts.com
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
-    <link rel="shortcut icon" type="image/x" href="/Contact/assets/images/2.png">
+    <link rel="shortcut icon" type="image/x" href="/assets/images/2.png">
 </head>
 
 <body>
@@ -27,7 +27,7 @@ Author URL: http://w3layouts.com
             <nav class="navbar navbar-expand-lg stroke px-0">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <img src="/Contact/assets/images/2.png" alt="" width="50px" >  <i class=""></i>UNIQUE <span>SCIENCE</span>
+                        <img src="/assets/images/2.png" alt="" width="50px" >  <i class=""></i>UNIQUE <span>SCIENCE</span>
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
@@ -44,16 +44,16 @@ Author URL: http://w3layouts.com
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="https://uniquescience.github.io/">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us</a>
+                            <a class="nav-link" href="https://uniquescience.github.io/About-us/">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                            <a class="nav-link" href="https://uniquescience.github.io/Services/">Services</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
+                            <a class="nav-link" href="https://uniquescience.github.io/Cbout-Us/">Contact Us</a>
                         </li>
                         <!-- search button -->
                         <div class="search-right ml-lg-3">
