--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="https://uniquescience.github.io/Services/">Services</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="https://uniquescience.github.io/Cbout-Us/">Contact Us</a>
+                            <a class="nav-link" href="https://uniquescience.github.io/Contact-Us/">Contact Us</a>
                         </li>
                         <!-- search button -->
                         <div class="search-right ml-lg-3">
