--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@ Author URL: http://w3layouts.com
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K8ESPFK3RQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K8ESPFK3RQ');
+</script>
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
       <script>
