--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ Author URL: http://w3layouts.com
                             </div>
                         </div>
                     </div>
+                    <!--
                     <div class="col-md-7 contact-right mt-md-0 mt-4">
                         <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
                             <div class="input-grids">
@@ -221,7 +222,8 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
+         <script type="text/javascript" src="https://form.jotform.com/jsform/211302223943443"></script>
     </section>
     
     <!-- //contact -->
