--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Author URL: http://w3layouts.com
                 <label class="sub-title mb-2">Get In Touch</label>
                 <h3 class="title-big">Contact Us</h3>
             </div>
-          <!--  <div class="mx-auto pt-lg-4 pt-md-5 pt-4" style="max-width:1000px">
+          <!---  <div class="mx-auto pt-lg-4 pt-md-5 pt-4" style="max-width:1000px">
                 <div class="row contact-block">
                     <div class="col-md-5 contact-left">
                         <h3 class="font-weight-bold mb-md-5 mb-4">Contact Details</h3>
