--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="https://uniquescience.github.io/Services/">Services</a>
                         </li>
                         <li class="nav-item active">
+                            <a class="nav-link" href="https://uniquescience.github.io/Contact-Us/">Blog</a>
+                        </li>
+                        <li class="nav-item active">
                             <a class="nav-link" href="https://uniquescience.github.io/Contact-Us/">Contact Us</a>
                         </li>
                         <!-- search button -->
